// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation-dropdown API Reference renders as expected 1`] = `
<div>
  <div
    className="dr-ui--navigation-dropdown relative"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Navigation"
      aria-labelledby=""
      className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate relative relative inline-block px6 mr24 w-full py12"
      id="api-reference-menu-toggle-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      API Reference
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-chevron-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </button>
    <ul
      aria-labelledby="api-reference-menu-toggle-button"
      className=""
      id="api-reference-menu-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="none"
      tabIndex={-1}
    />
  </div>
  <p>
    Nested example. Non-value items are treated as headings:
  </p>
  <div
    className="dr-ui--navigation-dropdown relative"
  >
    <button
      aria-expanded={false}
      aria-haspopup="true"
      aria-label="Navigation"
      aria-labelledby=""
      className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate relative relative inline-block px6 mr24 w-full py12"
      id="api-reference-menu-nested-toggle-button"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
    >
      API Reference
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-chevron-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </button>
    <ul
      aria-labelledby="api-reference-menu-nested-toggle-button"
      className=""
      id="api-reference-menu-nested-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="none"
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`navigation-dropdown Basic renders as expected 1`] = `
<div
  className="dr-ui--navigation-dropdown relative"
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Navigation"
    aria-labelledby=""
    className="flex-parent flex-parent--center-main flex-parent--space-between-main txt-truncate relative border border--gray-light py6 px12 bg-white round-full w-full color-gray-on-hover"
    id="navigation-dropdown-toggle-button"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
  >
    Title one
    <svg
      className="events-none icon inline-block align-t"
      focusable="false"
      role="presentation"
      style={
        Object {
          "height": 18,
          "width": 18,
        }
      }
    >
      <use
        xlinkHref="#icon-chevron-down"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="navigation-dropdown-toggle-button"
    className=""
    id="navigation-dropdown-menu"
    onBlur={[Function]}
    onKeyDown={[Function]}
    onMouseLeave={[Function]}
    role="none"
    tabIndex={-1}
  />
</div>
`;
